clusters/home/unifi/app/proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-http
spec:
  selector:
    app: unifi-http
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
