clusters/home/unifi/app/proxy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi-app
spec:
  parentRefs:
    - name: gw-unifi
      sectionName: https
  hostnames:
    - unifi.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: unifi-http
          port: 80
